--- a/www/index.html
+++ b/www/index.html
@@ -39,9 +39,8 @@
           <li><a href="#" id="liveDash">DASH live player</a></li>
           <li><a href="#" id="vodDash">DASH VOD player</a></li>
           <li><a href="#" id="vodDashDrm">DASH VOD with Widevine DRM player</a></li>
-          <!--<li><a href="#" id="vodHlsAdsIma">HLS VOD player with IMA ads</a></li>-->
+          <li><a href="#" id="vodHlsAdsIma">HLS VOD player with IMA ads</a></li>
           <li><a href="#" id="vodHlsAdsRmpVast">HLS VOD player with rmp-vast ads</a></li>
-
         </ul>
       </div>
     </div>
