--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   <script src="cordova.js"></script>
-  <script src="https://cdn.radiantmediatechs.com/rmp/5.10.2/js/rmp.debug.js"></script>
+  <script src="https://cdn.radiantmediatechs.com/rmp/5.10.3/js/rmp.min.js"></script>
   <script src="js/prod.js"></script>
 </body>
 
