--- a/www/index.html
+++ b/www/index.html
@@ -14,38 +14,39 @@
     }
   </script>
   <meta http-equiv="Content-Security-Policy" content="
-  default-src * blob: http: https: file: data: gap: https://ssl.gstatic.com 'unsafe-eval'; 
+  default-src * blob: http: https: file: data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; 
   style-src * http: https: file: 'unsafe-inline';
   img-src * http: https: file: data: android-webview-video-poster:;">
-  <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <title>Hello RMP and Cordova for Android TV</title>
 </head>
 
 <body>
-  <div id="rmpPlayer"></div>
+  <div id="rmp"></div>
   <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
+    <div class="row mt-5">
+      <div class="col">
         <h1>Radiant Media Player</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col">
         <img src="img/android_tv.png" width="32" alt="Android TV logo">
         <strong>Android TV Demo App</strong>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col">
         <h3>Select a player</h3>
-        <ul>
+        <ul id="demo-list">
           <li><a href="#" id="liveHls">HLS live player</a></li>
           <li><a href="#" id="vodHls">HLS VOD player</a></li>
           <li><a href="#" id="liveDash">DASH live player</a></li>
           <li><a href="#" id="vodDash">DASH VOD player</a></li>
-          <li><a href="#" id="vodDashVP9">DASH VOD VP9 player</a></li>
+          <li><a href="#" id="vodDashHevc">DASH VOD HEVC player</a></li>
+          <li><a href="#" id="vodDashAv1">DASH VOD AV1 player</a></li>
           <li><a href="#" id="vodDashDrm">DASH VOD with Widevine DRM player</a></li>
           <li><a href="#" id="vodDashDrm2">DASH VOD with Widevine DRM player Sample 2</a></li>
           <li><a href="#" id="vodHlsAdsIma">HLS VOD player with IMA ads</a></li>
@@ -53,10 +54,15 @@
         </ul>
       </div>
     </div>
+    <!--<div class="row">
+      <div class="col">
+        <iframe src="https://www.radiantmediaplayer.com/checkenv.html" width="640" height="1400"></iframe>
+      </div>
+    </div>-->
   </div>
   <script src="cordova.js"></script>
-  <script src="https://cdn.radiantmediatechs.com/rmp/5.10.5/js/rmp.debug.js"></script>
-  <script src="js/prod.js"></script>
+  <script src="https://cdn.radiantmediatechs.com/rmp/9.9.0/js/rmp.min.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
